fix gradients on firefox

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -1,4 +1,7 @@
 html
+  width 100%
+  height 100%
+
   font-family 'Minecraft'
   font-size 40px
 
